[gd_scene load_steps=4 format=3 uid="uid://6tjmbpgcspdy"]

[ext_resource type="Script" uid="uid://drnswo4dgomqh" path="res://scripts/statistics_scene.gd" id="1_gfxmp"]
[ext_resource type="FontFile" uid="uid://488xyso4pju6" path="res://assets/GUI/10 Font/CustomFont/multfont_3.ttf" id="1_h3cjw"]
[ext_resource type="Theme" uid="uid://dgwn8knwt1m3r" path="res://assets/Themes/main_theme.tres" id="2_24pys"]

[node name="statistics_scene" type="Control" node_paths=PackedStringArray("back_button", "labels_container", "texts_container", "stages_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gfxmp")
back_button = NodePath("MarginContainer/VBoxContainer/BackButtonContainer/BackButtton")
labels_container = NodePath("MarginContainer/VBoxContainer/VBoxContainer/LabelsContainer")
texts_container = NodePath("MarginContainer/VBoxContainer/VBoxContainer/Labels2Container")
stages_button = NodePath("MarginContainer/VBoxContainer/OptionsButtonContianer/OptionButton")

[node name="Backgrounds" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundContainer" type="VBoxContainer" parent="Backgrounds"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Background" type="ColorRect" parent="Backgrounds/BackgroundContainer"]
custom_minimum_size = Vector2(0, 137.83)
layout_mode = 2
size_flags_vertical = 3
color = Color(0.830335, 0.830335, 0.830335, 1)

[node name="Background2" type="ColorRect" parent="Backgrounds/BackgroundContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.533037, 0.533036, 0.533037, 1)

[node name="Background3" type="ColorRect" parent="Backgrounds/BackgroundContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.190763, 0.190762, 0.190762, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="BackButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="BackButtton" type="Button" parent="MarginContainer/VBoxContainer/BackButtonContainer"]
layout_mode = 2
theme = ExtResource("2_24pys")
theme_type_variation = &"LeaderboardsButton"
theme_override_fonts/font = ExtResource("1_h3cjw")
theme_override_font_sizes/font_size = 30
text = "BACK"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="total_enemies" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/LabelsContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="total_time" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/LabelsContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="correct_answers" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/LabelsContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="wrong_answers" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/LabelsContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/LabelsContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Labels2Container" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Enemies_Text" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Labels2Container"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "ENEMIES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time_Text" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Labels2Container"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "TIME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CorrAnsw_Text" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Labels2Container"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "C. ANSWERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WrongAns_Text" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Labels2Container"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "W. ANSWERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Text" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Labels2Container"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 18
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButtonContianer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/OptionsButtonContianer"]
layout_mode = 2
theme = ExtResource("2_24pys")
theme_override_font_sizes/font_size = 30
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "stages"
popup/item_0/id = 0
